backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: three-tier-backend
  namespace: production
  labels:
    app: three-tier-backend
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: three-tier-backend

  template:
    metadata:
      labels:
        app: three-tier-backend

    spec:
      containers:
        - name: backend

          image: 183678667273.dkr.ecr.us-east-1.amazonaws.com/three-tier-backend:v2

          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: three-tier-backend
  namespace: production
spec:
  type: ClusterIP

  selector:
    app: three-tier-backend

  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
