frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: three-tier-frontend
  namespace: production
  labels:
    app: three-tier-frontend
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: three-tier-frontend

  template:
    metadata:
      labels:
        app: three-tier-frontend

    spec:
      containers:
        - name: frontend

          image: 183678667273.dkr.ecr.us-east-1.amazonaws.com/three-tier-frontend:v1

          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: three-tier-frontend
  namespace: production
spec:
  type: ClusterIP

  selector:
    app: three-tier-frontend

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
